--- a/gulp/PLUGINS FOR GULP/min rename plugins/package.json
+++ b/gulp/PLUGINS FOR GULP/min rename plugins/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-uglyfly": "^1.4.2"
+    "gulp-clean-css": "^3.0.4",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-rename": "^1.2.2"
   }
 }
