--- a/gulp/watch+less+livereload(htmlcss)/package.json
+++ b/gulp/watch+less+livereload(htmlcss)/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-project",
+  "name": "gulpw",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-uglyfly": "^1.4.2"
+    "gulp-less": "^3.3.2",
+    "gulp-server-livereload": "^1.9.2",
+    "gulp-watch": "^4.3.11"
   }
 }
