--- a/gulp/watch+clean+less+cssnano/package.json
+++ b/gulp/watch+clean+less+cssnano/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "gulp-project",
+  "name": "gulp-moves",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-uglyfly": "^1.4.2"
+    "gulp-cssnano": "^2.1.2",
+    "gulp-less": "^3.3.2"
   }
 }
